# decade_resistiva_CMake

./: .gitignore  README.md
src/: CMakeLists.txt  CMakePresets.json  cmd.txt  main.c  toolchain-stm32-pc-lavoro.cmake  toolchain-stm32.cmake
src/bsp/: stm32f0xx_hal_conf.h  stm32f0xx_hal_msp.c  sysinit.c  sysinit.h
src/bsp/driver/: Driver_485.c  Driver_485.h  Driver_Analog.c  Driver_Analog.h  Driver_SPI.c  Driver_SPI.h  stm32f0xx_it.c  stm32f0xx_it.h
src/manager/: board_manager.c  board_manager.h
src/scheduler/: scheduler.c  scheduler.h
src/task/: task.h  taskDummy1.c  taskDummy1.h  taskDummy2.c  taskDummy2.h
src/utility/: generalDefines.h  generalInclude.h  platformTypes.h
